make logo bigger

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-
     <!-- Mirrored from theme.dsngrid.com/droow-l/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 02 May 2021 21:46:52 GMT -->
     <head>
         <!-- Required meta tags -->
@@ -59,10 +58,10 @@
                             <a href="index.html">
                                 <img class="dark-logo"
                                     src="https://static.exploremelon.com/gulf/logos/AD-Home.png"
-                                    alt="" />
+                                    alt />
                                 <img class="light-logo"
                                     src="https://static.exploremelon.com/gulf/logos/AD-Home.png"
-                                    alt="" />
+                                    alt />
                             </a>
                         </div>
                     </div>
@@ -81,10 +80,10 @@
                         <a href="index.html">
                             <img class="dark-logo"
                                 src="https://static.exploremelon.com/gulf/logos/AD-Home.png"
-                                alt="" />
+                                alt />
                             <img class="light-logo"
                                 src="https://static.exploremelon.com/gulf/logos/AD-Home.png"
-                                alt="" />
+                                alt />
                         </a>
                     </div>
 
@@ -180,7 +179,7 @@
                                             data-image-src="assets/img/slide.jpg"
                                             data-overlay="5">
                                             <img src="assets/img/slide.jpg"
-                                                alt="">
+                                                alt>
                                         </div>
                                     </div>
                                 </div>
@@ -239,7 +238,7 @@
                                             data-overlay="5">
                                             <img
                                                 src="assets/img/project/project9/1.jpg"
-                                                alt="">
+                                                alt>
                                         </div>
                                     </div>
                                 </div>
@@ -295,7 +294,7 @@
                                             data-overlay="0">
                                             <img
                                                 src="assets/img/project/project4/1.jpg"
-                                                alt="">
+                                                alt>
                                         </div>
                                     </div>
                                 </div>
@@ -305,7 +304,6 @@
                     </div>
 
                     <div class="dsn-slider-content"></div>
-
 
                     <div class="nav-slider">
                         <div class="swiper-wrapper" role="navigation">
@@ -466,7 +464,6 @@
                                         <small data-dsn-animate="text"> in the
                                             next ten years.</small>
 
-
                                         <div class="exper">
                                             <div class="numb-ex">
                                                 <span class="word"
@@ -487,21 +484,19 @@
                                 <div class="img-cent" data-dsn-grid="move-up">
                                     <div class="img-container">
                                         <img data-dsn-y="30%"
-                                            src="assets/img/about.png" alt="">
+                                            src="assets/img/about.png" alt>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </section>
 
-
-
                     <div class="box-seat box-seat-full section-margin">
                         <div class="container-fluid">
                             <div class="inner-img" data-dsn-grid="move-up">
                                 <img data-dsn-scale="1" data-dsn-y="30%"
                                     src="assets/img/project/project2/3.jpeg"
-                                    alt="">
+                                    alt>
                             </div>
                             <div class="pro-text">
                                 <h3> How We<br> Processed Gypsum?</h3>
@@ -539,7 +534,7 @@
                                             <div class="work-item slick-slide">
                                                 <img class="has-top-bottom"
                                                     src="assets/img/project/project3/1.jpg"
-                                                    alt="">
+                                                    alt>
                                                 <div class="item-border"></div>
                                                 <div class="item-info">
                                                     <a href="project01.html"
@@ -556,7 +551,7 @@
                                             <div class="work-item slick-slide">
                                                 <img class="has-top-bottom"
                                                     src="assets/img/project/project6/1.jpg"
-                                                    alt="">
+                                                    alt>
                                                 <div class="item-border"></div>
                                                 <div class="item-info">
                                                     <a href="project02.html"
@@ -574,7 +569,7 @@
                                             <div class="work-item slick-slide">
                                                 <img class="has-top-bottom"
                                                     src="assets/img/project/project3/22.jpeg"
-                                                    alt="">
+                                                    alt>
                                                 <div class="item-border"></div>
                                                 <div class="item-info">
                                                     <a href="project03.html"
@@ -592,7 +587,7 @@
                                                 <img class="has-top-bottom"
                                                     style="width:100%"
                                                     src="assets/img/project/project5/2.jpg"
-                                                    alt="">
+                                                    alt>
                                                 <div class="item-border"></div>
                                                 <div class="item-info">
                                                     <a href="project04.html"
@@ -608,7 +603,7 @@
                                             <div class="work-item slick-slide">
                                                 <img class="has-top-bottom"
                                                     src="assets/img/project/project5/1.jpeg"
-                                                    alt="">
+                                                    alt>
                                                 <div class="item-border"></div>
                                                 <div class="item-info">
                                                     <a href="project05.html"
@@ -639,13 +634,12 @@
                                     <div class="box-im" data-dsn-grid="move-up">
                                         <img class="has-top-bottom"
                                             src="assets/img/project/project9/777.jpg"
-                                            alt=""
+                                            alt
                                             data-dsn-move="20%">
                                     </div>
                                 </div>
 
                                 <div class="col-lg-6">
-
 
                                     <div class="box-info">
 
@@ -653,7 +647,6 @@
                                             data-dsn-animate="up">
                                             <h2>Time Saving.</h2>
                                         </div>
-
 
                                         <p data-dsn-animate="up">By using
                                             AD-Block a worker can produce
@@ -666,9 +659,6 @@
                                             time to dry, in addition to that you
                                             can enter the next stage after two
                                             hours of construction.</p>
-
-
-
 
                                     </div>
                                 </div>
@@ -710,7 +700,7 @@
                                                 <div class="avatar">
                                                     <img
                                                         src="assets/img/avatar/1.jpg"
-                                                        alt="">
+                                                        alt>
                                                 </div>
                                                 <div class="label">
                                                     <div class="cell">- Helen
@@ -734,7 +724,7 @@
                                                 <div class="avatar">
                                                     <img
                                                         src="assets/img/avatar/2.jpg"
-                                                        alt="">
+                                                        alt>
                                                 </div>
                                                 <div class="label">
                                                     <div class="cell">- Helen
@@ -759,7 +749,7 @@
                                                 <div class="avatar">
                                                     <img
                                                         src="assets/img/avatar/3.jpg"
-                                                        alt="">
+                                                        alt>
                                                 </div>
                                                 <div class="label">
                                                     <div class="cell">- Helen
@@ -773,7 +763,6 @@
                             </div>
                         </div>
                     </section>
-
 
                     <section class="brand-client section-margin">
                         <div class="container">
@@ -789,7 +778,7 @@
                                 <div class="logo-box">
                                     <img
                                         src="https://static.exploremelon.com/gulf/logos/01.png"
-                                        alt="">
+                                        alt>
 
                                     <div class="info">
                                         <div class="content">
@@ -810,7 +799,7 @@
                                 <div class="logo-box">
                                     <img
                                         src="https://static.exploremelon.com/gulf/logos/02.png"
-                                        alt="">
+                                        alt>
 
                                     <div class="info">
                                         <div class="content">
@@ -831,7 +820,7 @@
                                 <div class="logo-box">
                                     <img
                                         src="https://static.exploremelon.com/gulf/logos/03.png"
-                                        alt="">
+                                        alt>
 
                                     <div class="info">
                                         <div class="content">
@@ -852,7 +841,7 @@
                                 <div class="logo-box">
                                     <img
                                         src="https://static.exploremelon.com/gulf/logos/05.png"
-                                        alt="">
+                                        alt>
 
                                     <div class="info">
                                         <div class="content">
@@ -873,7 +862,7 @@
                                 <div class="logo-box">
                                     <img
                                         src="https://static.exploremelon.com/gulf/logos/07.png"
-                                        alt="">
+                                        alt>
 
                                     <div class="info">
                                         <div class="content">
@@ -894,7 +883,7 @@
                                 <div class="logo-box">
                                     <img
                                         src="https://static.exploremelon.com/gulf/logos/04.png"
-                                        alt="">
+                                        alt>
 
                                     <div class="info">
                                         <div class="content">
@@ -915,8 +904,6 @@
                         </div>
                     </section>
 
-
-
                 </div>
 
                 <footer class="footer">
@@ -928,7 +915,7 @@
                                         <div class="footer-logo">
                                             <a href="#"><img
                                                     src="https://static.exploremelon.com/gulf/logos/AD-Home.png"
-                                                    alt=""></a>
+                                                    alt></a>
                                         </div>
 
                                         <div class="footer-social">
@@ -972,8 +959,8 @@
                                             100 727 9209</p>
                                         <p class="over-hidden"><strong>E</strong>
                                             <span>:</span><a class="link-hover"
-                                                data-hover-text="info@ad-block.net"
-                                                href="#">info@ad-block.net</a>
+                                                data-hover-text="info@ad-innovations.net"
+                                                href="#">info@ad-innovations.net</a>
                                         </p>
                                     </div>
                                 </div>
@@ -1014,7 +1001,6 @@
         </div>
         <!-- // Wait Loader -->
 
-
         <!-- cursor -->
         <div class="cursor">
 
@@ -1037,7 +1023,6 @@
         <script src="assets/js/custom.js"></script>
         <script src="./asstes/js/mine.js"></script>
     </body>
-
 
     <!-- Mirrored from theme.dsngrid.com/droow-l/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 02 May 2021 21:50:46 GMT -->
 </html>
